[package]
name = "systep"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = "1.0.0"
serde = { version = "1.0.228", features = ["derive"] }
syact = { git = "https://github.com/SamuelNoesslboeck/syact" }
sykin = "0.1.0"
syunit = "0.4.0"

[dev-dependencies]
tokio = { version = "1.52.1", features = [ "full" ] }

[[test]]
name = "main_tests"
path = "tests/mod.rs"
